--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,17 @@
-FROM stablebaselines/rl-baselines3-zoo:0.11.0a4
+FROM stablebaselines/rl-baselines3-zoo:latest
 
 
 COPY requirements.txt /tmp/
 
-
+RUN pip config set global.index-url https://mirror.sjtu.edu.cn/pypi/web/simple
 RUN pip install -r  /tmp/requirements.txt -I
-
 RUN pip install jupyterlab
-
 
 WORKDIR /home
 # Add Tini. Tini operates as a process subreaper for jupyter. This prevents kernel crashes.
-ENV TINI_VERSION v0.6.0
+ENV TINI_VERSION v0.19.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
 RUN chmod +x /usr/bin/tini
 ENTRYPOINT ["/usr/bin/tini", "--"]
-
 
 CMD ["jupyter", "lab", "--port=8888", "--no-browser", "--ip=0.0.0.0", "--NotebookApp.token=''","--NotebookApp.password=''","--allow-root"]
